# singleton-optimizer

./: .build.yml  .gitignore  README.md  cabal.project  ghc-with-plugin.sh  singleton-optimizer.cabal
.builds/: optimizer.yml  thesis.yml
benchs/: reverse.hs
misc-experiments/: GADTTermination.hs  core-experiments.hs  snippets.hs
optimizer/: cabal.project
optimizer/misc-experiments/: GADTTermination.hs  snippets.hs
optimizer/plugin-experiments/CoreAnnotationPlugin/: CoreAnnotationPlugin.cabal
optimizer/plugin-experiments/CoreAnnotationPluginMain/: CoreAnnotationPluginMain.cabal  CoreAnnotationPluginMain.hs
optimizer/plugin-experiments/SourcePlugin/: SourcePlugin.hs
optimizer/plugin-experiments/SourcePluginMain/: SourcePluginMain.cabal
optimizer/singleton-optimizer/: CHANGELOG.md  LICENSE  singleton-optimizer.cabal
optimizer/singleton-optimizer/src/GHC/Plugin/: SingletonOptimizer.hs
optimizer/singleton-optimizer/tests/: Helpers.hs  nonterminating.hs  simple-test.hs  trigger-tests.hs
plugin-experiments/CoreAnnotationPlugin/: CoreAnnotationPlugin.hs
plugin-experiments/SourcePlugin/: SourcePlugin.cabal
plugin-experiments/SourcePluginMain/: SourcePluginMain.hs
src/GHC/Plugin/: SingletonOptimizer.hs
src/GHC/Plugin/SingletonOptimizer/: Whitelist.hs
src/GHC/Plugin/SingletonOptimizer/Whitelist/: Types.hs
tests/: Helpers.hs
thesis/: .gitignore  Gazzetta_Francesco_Informatica_19.tex  abstract.tex  attachments.tex  benchmark-optimized.csv  benchmark-unoptimized.csv  biblio.bib  capitolo1.tex  content.tex  default.nix  frontmatter.tex
