cabal-version:       2.0

name:                singleton-optimizer
version:             0.1.0.0
synopsis:            Total Singleton Optimizer GHC plugin
description:         This package contains a GHC plugin and annotation that
                     optimizes away any marked singleton that it proves total.
                     .
                     See the module's haddocks for more info.
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          fgaz@fgaz.me
copyright:           (c) Francesco Gazzetta 2019
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     GHC.Plugin.SingletonOptimizer
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
                     , ghc
                     , liquidhaskell ^>=0.8.6.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite trigger-tests
  ghc-options:         -fplugin GHC.Plugin.SingletonOptimizer
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , singleton-optimizer
                     , ansi-wl-pprint ^>=0.6.9
  main-is:             trigger-tests.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall

