cabal-version:       2.0

name:                CoreAnnotationPlugin
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     CoreAnnotationPlugin
  other-extensions:    DeriveDataTypeable
  build-depends:       base >=4.12 && <4.13
                     , ghc
  default-language:    Haskell2010

